# YoctoImageDenoiser

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README2.md  Readme.md  denoise_in.ppm  denoise_out.ppm  denoise_ref.ppm  instructions.md  readme.html
apps/: CMakeLists.txt
apps/prova/: CMakeLists.txt  backup.cpp  prova.cpp
apps/prova_nlm/: CMakeLists.txt  backup.cpp  prova_nlm.cpp
apps/yimage_intel_denoiser/: CMakeLists.txt  yimage_intel_denoiser.cpp
apps/yimage_nlm_denoiser/: CMakeLists.txt  yimage_nlm_denoiser.cpp
apps/yimagedenoise/: CMakeLists.txt  yimagedenoise.cpp
apps/yscenetrace/: yscenetrace.cpp
libs/oidn/lib/: libOpenImageDenoise.so.0
libs/oiio/include/OpenImageIO/: oiioversion.h
libs/yocto/: yocto_commonio.h
libs/yocto_extension/: CMakeLists.txt  yocto_extension.cpp  yocto_extension.h
libs/yocto_extension/ext/: image_io.cpp  image_io.h
libs/yocto_pathtrace/: yocto_pathtrace.cpp  yocto_pathtrace.h
scripts/: convert_hdr.sh  denoise_intel.sh  denoise_nlm.sh  generate_images.sh  render_scene.sh
tests/images/hdr/01_cornellbox/: 01_cornellbox_albedo_1280_64.hdr  01_cornellbox_normal_1280_64.hdr
tests/images/hdr/07_hair/: 07_hair_1280_64.hdr  07_hair_albedo_1280_64.hdr  07_hair_normal_1280_64.hdr
tests/images/hdr/11_bathroom1/: 11_bathroom1_1280_1024.hdr  11_bathroom1_1280_64.hdr  11_bathroom1_albedo_1280_64.hdr  11_bathroom1_normal_1280_64.hdr
tests/images/hdr/13_bedroom/: 13_bedroom_1280_64.hdr  13_bedroom_albedo_1280_64.hdr  (+1 more)
tests/scenes/extra_dining_room/: scene.json
tests/scenes/extra_living_room/: scene.json
(+160 files in other folders)
